    - fixed behavior of inserts with script attribute. (Andrei)
    - fixed bug with $smarty.cookies and $smarty.server. (Andrei)
    - wordwrap and indent are missing from 2.0 release, now fixed. (Monte)
    - removed show_info_header and show_info_include variables. (Monte)

Version 2.0.0
-------------
    - added "eval" function plugin for evaluating variables as
      templates. (Monte)
    - removed $tpl_file_ext class variable, no longer used. (Monte)
    - added "hex" and "hexentity" escape types to escape modifier.
      (Monte)
    - removed dependency on PEAR. (Andrei)
    - update popup_init to accept src attribute. (Monte, Duncan Forrest)
    - implemented several optimizations, speeding up Smarty
      significantly in most cases. (Andrei,Monte)
    - implemented plugin architecture. (Andrei)
    - added wordwrap and indent modifiers. (Monte)
    - added support for 'If-Modified-Since' headers for cached content.
      (Monte)
    - removed insert_tag_check class variable, no longer needed. (Monte)
    - optimized cache fetches by scanning for insert tags only if they
      exist. (Monte)
    - fixed bugs in overlib. (Monte, Duncan Forrest)
    - fixed a problem with compile_id usage. (Andrei)
    - fixed problem with using assigned vars with {include_php ...}
      filepath. (Monte)

Version 1.5.2
-------------
    - added Smarty object as fifth argument for template resource functions.
      (Monte)
    - fixed a bug with incorrectly combined cache and compile id in
      clear_cache(). (Andrei)
    - fixed bug in smarty_make_timestamp introduced in PHP 4.1.0. (Monte)
    - fixed bug with cached insert debug timing. (Monte)
    - added 'script' attribute to {insert..} which specifies the script that
      the insert function can be found in. (Andrei)
    - added default template function handler. (Monte)

Version 1.5.1
-------------
    - removed error message from the generic _read_file() method, the caller
      should take care of that. (Andrei)